Closed Bug 1391773 Opened 8 years ago Closed 8 years ago

Relax [[DefineOwnProperty]] on module namespace exotic objects

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: leonardo.balter, Assigned: anba)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.110 Safari/537.36 Steps to reproduce: Ecma262: https://github.com/tc39/ecma262/pull/858 Test262: https://github.com/tc39/test262/pull/1170
Attached patch bug1391773.patchSplinter Review
Unfortunately I can't provide much background information why this spec-change is useful. :-( I've named the ValidatePropertyDescriptor function after the spec's ValidateAndApplyPropertyDescriptor (https://tc39.github.io/ecma262/#sec-validateandapplypropertydescriptor) abstract operation. And the patch also changes the error messages to match NativeDefineProperty.
Assignee: nobody → andrebargull
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #8900350 - Flags: review?(jcoppeard)
Comment on attachment 8900350 [details] [diff] [review] bug1391773.patch Review of attachment 8900350 [details] [diff] [review]: ----------------------------------------------------------------- Great, thanks for fixing.
Attachment #8900350 - Flags: review?(jcoppeard) → review+
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/704b352ba3be Update [[DefineOwnProperty]] for module namespace objects per ES2018 draft. r=jonco
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: