Bug 1391773 - Update [[DefineOwnProperty]] for module namespace objects per ES2018 draft. r=jonco